got the program working again
